--- a/AncientTrees.uproject
+++ b/AncientTrees.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "AncientTrees",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
